# infoquality

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: bandit.yml  lint.yml  python-publish.yml
model/: pyproject.toml
model/src/infoquality/: artifacts.py  data.py  hyperparameters.py  model.py  predictor.py  preprocessor.py  save.py  utils.py
model/tests/: test_model.py  test_predictor.py  test_preprocessor.py
training/: Makefile  README.md
training/requirements/: dev.txt  training.txt
training/scripts/: run.py  train.py
training/scripts/common/: evaluate.py  metrics.py  utils.py
